(library
 (name access_path)
 (public_name pyrelib.access_path)
 (modules accessPath)
 (wrapped false)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
 (libraries core pyrelib.ast pyrelib.domains))

(library
 (name shims)
 (public_name pyrelib.shims)
 (modules shims)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
 (libraries core pyrelib.analysis pyrelib.ast))

(library
 (name target)
 (public_name pyrelib.target)
 (modules target)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
 (libraries core pyrelib.access_path pyrelib.ast))

(library
 (name interprocedural)
 (public_name pyrelib.interprocedural)
 (modules
  (:standard \ shims target accessPath))
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
 (libraries
  core
  sexplib
  yojson
  capnp
  stdint
  ppxlib
  ppx_deriving_yojson
  ppx_deriving
  pyrelib.access_path
  pyrelib.analysis
  pyrelib.ast
  pyrelib.recognized
  pyrelib.scheduler
  pyrelib.specialCallResolution
  pyrelib.shims
  pyrelib.target
  pyrelib.statistics
  pyrelib.alarm
  pyrelib.version
  pyrelib.file
  pyrelib.perfProfiler))
