(library
 (name interproceduralTest)
 (public_name pyrelib.interproceduralTest)
 (modules interproceduralTest)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_hash))
 (libraries
  core
  ounit2
  unix
  pyrelib.test
  pyrelib.ast
  pyrelib.analysis
  pyrelib.interprocedural))

(tests
 (names
  accessPathTest
  targetTest
  callGraphTest
  callGraphFixpointTest
  dependencyGraphTest
  classHierarchyGraphTest
  classIntervalTest
  classIntervalSetTest
  classIntervalSetGraphTest
  fetchCallablesTest
  overrideGraphTest
  changedPathsTest
  globalConstantsTest
  pyreflyApiTest)
 (modules :standard \ interproceduralTest)
 (deps
  (env_var PYREFLY_BINARY)
  %{workspace_root}/pyrefly.exe)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_hash))
 (libraries
  ounit2
  unix
  sexplib
  ppxlib
  ppx_hash
  ppx_deriving
  pyrelib.test
  pyrelib.ast
  pyrelib.access_path
  pyrelib.interprocedural
  pyrelib.interproceduralTest
  pyrelib.taintTestHelper
  pyrelib.taint))
